Replacing svg-inject with ruby SVG inliner; added conditional for svg-inject (inject_svgs: true); lozad loading for images in Discover template.

--- a/source/contentful_templates/discover.html.erb
+++ b/source/contentful_templates/discover.html.erb
@@ -2,6 +2,7 @@
 layout: basic
 customCSS: discover
 ogType: article
+inject_svgs: true
 ---
 <% p = locals[:item]
 current_page.data.title = p["title"] + " | Discovery Topics"
@@ -40,7 +41,10 @@ end
                     <% if p.has_key?("related_whitepaper") %><li class="menu-item"><a class="menu-item--link" href="#discoverWhitepaper">White Papers</a></li><% end %>
                     <% if p.has_key?("related_guides") %><li class="menu-item"><a class="menu-item--link" href="#discoverGuides">Guides</a></li><% end %>
                     <% if p.has_key?("related_podcast") %><li class="menu-item"><a class="menu-item--link" href="#discoverInnovation">Podcasts</a></li><% end %>
-                    <% if p.has_key?("cta_ref") %><li class="menu-item menu-item--cta"><a class="button button--primary small" href="#ctaBottom" title="<%= p["cta_ref"]["cta_title"] %>"><%= p["cta_ref"]["cta_label"] %> <i class="fa fa-angle-down icon-after"></i></a></li><% end %>
+                    <% if p.has_key?("cta_ref") %><li class="menu-item menu-item--cta">
+                        <%= partial "partials/snippets/button", :locals => { :label => "Go Further",  :url => "#ctaBottom", :button_classes => "button", :icon => "icon-chevron-down" } %>
+
+                    </li><% end %>
                 </ul>
             </nav>
         </div>
@@ -77,7 +81,7 @@ end
                     <% if p["cta_ref"].has_key?("cta_image") %>
                         <aside class="callout discover--cta discover--cta-image" id="ctaTop">
                             <a class="" href="<%= p["cta_ref"]["cta_url"] %>" title="<%= p["cta_ref"]["cta_label"] %>">
-                                <img src="<%= p["cta_ref"]["cta_image"]["url"] %>" alt="<%= p["cta_ref"]["cta_label"] %>">
+                                <img data-src="<%= p["cta_ref"]["cta_image"]["url"] %>" alt="<%= p["cta_ref"]["cta_label"] %>" class="lozad">
                             </a>
                         </aside>
                     <% else %>
@@ -139,35 +143,8 @@ end
         <div class="masonry-group">
             <% p["related_blog"].each do |post| %>
             <% related_post = data.site.blog[post.id] %>
-            <% related_post.uri = "/" + related_post._meta.content_type_id + "/" + related_post.slug %>
                 <aside class="masonry-group--item">
-                    <div class="card card--hover drop container-gray-12">
-                        <% if related_post.has_key?("featured_image") %>
-                            <a class="" href="<%= related_post.uri %>" title="Read this blog post">
-                                <img class="card-img" src="<%= related_post.featured_image.url %>?fit=thumb&w=400&h=200&q=55" alt="Image: <%= related_post.title %>" />
-                            </a>
-                        <% end %>
-                        <div class="card-section">
-
-                            <h3 class="headline-5">
-                                <a class="" href="<%= related_post.uri %>" title="Read this blog post"><%= related_post.title %></a>
-                            </h3>
-                            <% if related_post.has_key?("pub_date") %>
-                                <div class="text-tiny"><i class="fa fa-calendar" aria-hidden="true"></i> <%= related_post['pub_date'].strftime('%B %-d, %Y') %> &nbsp;</div>
-                            <% end %>
-                            <% if related_post.has_key?("summary") || related_post["summary"] == "" %>
-                                <p><%= related_post["summary"] %></p>
-                                <%#= Kramdown::Document.new(related_post["summary"]).to_html %>
-                            <% else %>
-                                <% if related_post.has_key?("blog_lead") %>
-                                    <%= Kramdown::Document.new(related_post["blog_lead"]).to_html %>
-                                <% end %>
-                            <% end %>
-                        </div>
-                        <!-- <div class="card-divider card-divider--flush">
-                            <a href="/blog/<%= post["slug"] %>" class="button small hollow">Read this post <i class="fa fa-angle-right"></i></a>
-                        </div> -->
-                    </div>
+                    <%= partial "partials/cards/featured-blog", :locals => { :post => related_post, :style => "light", :size => "small" } %>
                 </aside>
             <% end %>
         </div>
@@ -179,7 +156,7 @@ end
 
             <div class="row align-center">
                 <div class="columns small-12 medium-3 large-2 show-for-medium">
-                    <img class="group" alt="Datica Whitepapers" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/4OxiTrPw4MY68q6iuwgoKE/184587a2732fe2eae7871918da9a6028/art-whitepapers-bulb.png, small]">
+                    <img class="group lozad" alt="Datica Whitepapers" data-src="https://images.ctfassets.net/189dvqdsjh46/4OxiTrPw4MY68q6iuwgoKE/184587a2732fe2eae7871918da9a6028/art-whitepapers-bulb.png">
                 </div>
                 <div class="columns small-12 medium-9 large-8">
                     <h3 class="discover--section-header"><%= p["title"] %>: <span class="discover--category">White Papers</span></h3>
@@ -209,7 +186,7 @@ end
             </div>
             <div class="row align-center">
                 <div class="columns small-12 medium-3 large-3 text-center">
-                    <img class="group" alt="Datica Guides" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/2zqo1GLqz6uAOgSCMe4aoc/ae9ed493b7dc700d63aad63b57689562/Guide_-_integration_featured_image.png?w=150, small], [https://images.ctfassets.net/189dvqdsjh46/2zqo1GLqz6uAOgSCMe4aoc/ae9ed493b7dc700d63aad63b57689562/Guide_-_integration_featured_image.png?w=400, medium]">
+                    <img class="group lozad" alt="Datica Guides" data-src="https://images.ctfassets.net/189dvqdsjh46/2zqo1GLqz6uAOgSCMe4aoc/ae9ed493b7dc700d63aad63b57689562/Guide_-_integration_featured_image.png?w=400">
                 </div>
                 <div class="columns small-12 medium-9 large-8">
                 <% p["related_guides"].each do |post| %>
@@ -246,7 +223,7 @@ end
                         <%# if post["guest"].has_key?("fullname") %>
                         <div class="person-card--vertical float-right-on-medium">
                             <a class="" href="/innovation/<%= post["slug"] %>" title="Listen to this episode now">
-                                <img src="<%= podcast_guest.profile_pic.url %>?fit=thumb&w=400&h=400&f=face&q=45" class="avatar circle" alt="<%= podcast_guest.fullname %>">
+                                <img data-src="<%= podcast_guest.profile_pic.url %>?fit=thumb&w=400&h=400&f=face&q=45" class="lozad avatar circle" alt="<%= podcast_guest.fullname %>">
                             </a>
                             <div class="person-card--caption">
                                 <div class="person-name"><%= podcast_guest.fullname %></div>
@@ -286,7 +263,7 @@ end
                 <% if p["cta_ref"].has_key?("cta_image") %>
                     <aside class="discover--cta-image">
                         <a class="" href="<%= p["cta_ref"]["cta_url"] %>" title="<%= p["cta_ref"]["cta_label"] %>">
-                            <img src="<%= p["cta_ref"]["cta_image"]["url"] %>" alt="<%= p["cta_ref"]["cta_label"] %>">
+                            <img data-src="<%= p["cta_ref"]["cta_image"]["url"] %>" alt="<%= p["cta_ref"]["cta_label"] %>" class="lozad">
                         </a>
                     </aside>
                 <% else %>
