--- a/source/partials/scripts/_footer.erb
+++ b/source/partials/scripts/_footer.erb
@@ -1,10 +1,12 @@
-<%= javascript_include_tag "svg-injector" %>
-<script>
-document.addEventListener("DOMContentLoaded", function(event) {
-    var mySVGsToInject = document.querySelectorAll('img.inject-me');
-    SVGInjector(mySVGsToInject);
-});
-</script>
+<% if current_page.data.has_key?("inject_svgs") %>
+	<%= javascript_include_tag "svg-injector" %>
+	<script>
+	document.addEventListener("DOMContentLoaded", function(event) {
+	    var mySVGsToInject = document.querySelectorAll('img.inject-me');
+	    SVGInjector(mySVGsToInject);
+	});
+	</script>
+<% end %>
 <%= javascript_include_tag "jquery", "foundation.min" %>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lozad.js/1.6.0/lozad.min.js"></script>
 <%#= javascript_include_tag "nav", "smooth-scroll", "cookie", "sharer", "all" %>
