--- a/source/partials/snippets/_footer.erb
+++ b/source/partials/snippets/_footer.erb
@@ -38,7 +38,9 @@
                 </li>
                 <li><img class="logo-size--large lozad" data-src="https://images.ctfassets.net/189dvqdsjh46/1db5oL4HFeKkSGGcCmQACW/22310ce8955be0da9b65addc7a46dbd9/AICPA_SOC_2_badge.svg" alt="AICPA/SOC2 badge" />
                 </li>
-                <li><script defer type='text/javascript' src='https://www.coalfire.com/CMSPages/Coalfire/CertificateSealJS.aspx?cc=248fe0c0-6343-4785-9cb0-0602a6a82a6c'></script>
+                <li>
+                    <img data-src="https://images.ctfassets.net/189dvqdsjh46/2VnE1VKgSI0CigIaimYymm/8661955dacafd96c3c565bb5d1503dc8/coalfire-badge.png" class="lozad logo-size--large">
+                    <%# <script defer type='text/javascript' src='https://www.coalfire.com/CMSPages/Coalfire/CertificateSealJS.aspx?cc=248fe0c0-6343-4785-9cb0-0602a6a82a6c'></script> %>
                 </li>
                 <li><img class="logo-size--large lozad" src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" alt="Cloud native computing foundation"></li>
             </ul>
