--- a/source/partials/snippets/_footer.erb
+++ b/source/partials/snippets/_footer.erb
@@ -15,9 +15,9 @@
             </div>
         <% end %>
     </div>
-    <div class="row align-justify align-middle group">
+    <div class="row">
         <div class="columns">
-            <ul class="list-horiz">
+            <ul class="menu align-middle group">
                 <li>
                     <a class="nav-logo--link"><svg class="nav-logo" id=datica-logo-footer><use class=symbol-icon xlink:href="#datica-logo-horiz"></use></svg></a>
                 </li>
@@ -26,23 +26,16 @@
                         <%= current_link_to m.title, m.url, title: m.desc, class: "link--dark faded" %>
                 <% end %>
             </ul>
-        </div>
-<!--         <div class="columns small-12 medium-2">
-            
-        </div> -->
-    </div>
-    <div class="row">
-        <div class="columns">
-            <ul class="list-horiz">
-                <li><img class="logo-size--large lozad" data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/6438fbb76abda83deac6b9c810745891/hitrust-logo.svg" alt="HITRUST Certified" />
+            <ul class="menu align-middle">
+                <li class="pad--sm"><img data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/6438fbb76abda83deac6b9c810745891/hitrust-logo.svg" class="logo-size--large lozad" alt="HITRUST Certified" />
                 </li>
-                <li><img class="logo-size--large lozad" data-src="https://images.ctfassets.net/189dvqdsjh46/1db5oL4HFeKkSGGcCmQACW/22310ce8955be0da9b65addc7a46dbd9/AICPA_SOC_2_badge.svg" alt="AICPA/SOC2 badge" />
+                <li class="pad--sm"><img data-src="https://images.ctfassets.net/189dvqdsjh46/1db5oL4HFeKkSGGcCmQACW/22310ce8955be0da9b65addc7a46dbd9/AICPA_SOC_2_badge.svg" class="logo-size--large lozad" alt="AICPA/SOC2 badge" />
                 </li>
-                <li>
-                    <img data-src="https://images.ctfassets.net/189dvqdsjh46/2VnE1VKgSI0CigIaimYymm/8661955dacafd96c3c565bb5d1503dc8/coalfire-badge.png" class="lozad logo-size--large">
+                <li class="pad--sm">
+                    <img data-src="https://images.ctfassets.net/189dvqdsjh46/2VnE1VKgSI0CigIaimYymm/8661955dacafd96c3c565bb5d1503dc8/coalfire-badge.png" class="lozad logo-size--large" />
                     <%# <script defer type='text/javascript' src='https://www.coalfire.com/CMSPages/Coalfire/CertificateSealJS.aspx?cc=248fe0c0-6343-4785-9cb0-0602a6a82a6c'></script> %>
                 </li>
-                <li><img class="logo-size--large lozad" src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" alt="Cloud native computing foundation"></li>
+                <li class="pad--sm"><img src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" class="logo-size--large lozad" alt="Cloud native computing foundation" /></li>
             </ul>
         </div>
     </div>
