Preloading HS scripts; restored og share images.

--- a/source/contact/azure.html.slim
+++ b/source/contact/azure.html.slim
@@ -6,6 +6,7 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Azure, Kubernetes, M
 ogType: "product"
 collectionName: "azure"
 layout: basic
+asset_preload: '<link href="https://js.hsforms.net/forms/v2.js" rel="preload" as="script" />'
 ---
 
 ruby:
