--- a/source/contact/thanks.html.erb
+++ b/source/contact/thanks.html.erb
@@ -3,10 +3,9 @@ title: "Thanks for reaching out"
 summary: "A member of the Datica team will be following up"
 author: "Datica, Inc."
 tags: "HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
-# date: "January 1, 2017"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
-# customCSS: "contact-us"
 layout: basic
+asset_preload: '<link href="https://js.hsforms.net/forms/v2.js" rel="preload" as="script" />'
 ---
 <div class="container-color--dark-grad-blue">
     <%= partial "partials/head/header", :locals => { :style => "light" } %>
