--- a/source/partials/head/_tags.erb
+++ b/source/partials/head/_tags.erb
@@ -1,9 +1,5 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<%# use asset_preload to preload relevant assets %>
-<% if current_page.data.has_key?("asset_preload") %>
-    <%= current_page.data.asset_preload %>
-<% end %>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title><%= current_page.data.title %></title>
 <meta name="description" content="<%= current_page.data.summary %>">
@@ -40,16 +36,21 @@
 <% if current_page.data.has_key?("share_image") %>
     <meta property="og:image" content="<%= current_page.data.share_image %>">
     <meta property="twitter:card" content="<%= current_page.data.share_image %>">
-<%#
-<meta property="twitter:image" content="<%#= current_page.data.share_image
-%>
+    <meta property="twitter:image" content="<%= current_page.data.share_image %>">
 <% elsif current_page.data.has_key?("featured_image") %>
     <meta property="og:image" content="<%= current_page.data.post_featured_image %>">
 	<meta property="twitter:card" content="<%= current_page.data.post_featured_image %>">
+    <meta property="twitter:image" content="<%= current_page.data.post_featured_image %>">
 <% else %>
     <meta property="og:image" content="<%= image_share_default %>">
 	<meta property="twitter:card" content="summary">
+    <meta property="twitter:image" content="<%= image_share_default %>">
 <% end %>
 <% if current_page.data.has_key?("feed_url") %>
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="<%= current_page.data.feed_url %>">
 <% end %>
+<%# use asset_preload to preload relevant assets %>
+<% if current_page.data.has_key?("asset_preload") %>
+    <%= current_page.data.asset_preload %>
+<% end %>
+<link href="/public/css/seldon.css" rel="preload" as="style" />
