--- a/source/contentful_templates/report.html.slim
+++ b/source/contentful_templates/report.html.slim
@@ -1,6 +1,7 @@
 ---
 layout: basic
 ogType: article
+asset_preload: '<link href="https://js.hsforms.net/forms/v2.js" rel="preload" as="script" />'
 ---
 ruby:
     p = locals[:item]
