--- a/source/demo/index.html.slim
+++ b/source/demo/index.html.slim
@@ -4,6 +4,7 @@ summary: "Connect with a compliance or integration expert at Datica"
 author: "Datica, Inc."
 tags: "HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 layout: basic
+asset_preload: '<link href="https://js.hsforms.net/forms/v2.js" rel="preload" as="script" />'
 ---
 ruby:
     current_page.data.share_image = image_share_platform
