--- a/source/partials/head/_icons.erb
+++ b/source/partials/head/_icons.erb
@@ -1,7 +1,7 @@
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=pgq8XMxkpy">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=pgq8XMxkpy">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=pgq8XMxkpy">
-<link rel="manifest" href="/manifest.json?v=pgq8XMxkpy">
-<link rel="mask-icon" href="/safari-pinned-tab.svg?v=pgq8XMxkpy" color="#1055ff">
-<link rel="shortcut icon" href="/favicon.ico?v=pgq8XMxkpy">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1055ff">
+<link rel="shortcut icon" href="/favicon.ico">
 <meta name="theme-color" content="#dadada">
