--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -1,6 +1,6 @@
 <%# Article Layout Template - Datica 2017 %>
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
     <head>
         <%# Meta tags %>
         <%= partial "partials/head/tags" %>
