--- a/source/layouts/basic.erb
+++ b/source/layouts/basic.erb
@@ -1,6 +1,6 @@
 <%# Basic Layout Template - Datica, 2016 - 2017 %>
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
     <head>
         <%# Meta tags %>
         <%= partial "partials/head/tags" %>
