--- a/source/layouts/products.erb
+++ b/source/layouts/products.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en">
 <%# datica CKS 2018 %>
     <head>
         <%= partial "partials/head/tags" %>
