--- a/source/layouts/sparse.erb
+++ b/source/layouts/sparse.erb
@@ -1,6 +1,6 @@
 <%# Sparse Layout Template - Datica, 2017. for debugging JS %>
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
     <head>
         <%# Meta tags %>
         <%= partial "partials/head/tags" %>
