--- a/source/partials/scripts/_footer.erb
+++ b/source/partials/scripts/_footer.erb
@@ -26,4 +26,6 @@
         <script defer src="<%= filename.strip %>"></script>
     <% end %>
 <% end %>
-<!-- <script async src="/public/js/smooth-scroll.js"></script> -->
+<% unless current_page.data.has_key?("smoothScroll") && current_page.data.smoothScroll == false %>
+	<script defer src="/public/js/smooth-scroll.js"></script>
+<% end %>
