--- a/source/dhsf/index.html.erb
+++ b/source/dhsf/index.html.erb
@@ -5,9 +5,10 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 12, 2017"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
-layout: sparse
+layout: basic
 customCSS: "dhsf"
 customJS: "/public/js/dhsf.js"
+smoothScroll: false
 ---
 
 <div class="df dhsf container-color--gray-dark-grad">
